--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -49,14 +49,14 @@
     padding-top: 3px;
 }
 
-.food_count {
+.product_count {
     position: absolute;
     top: -7px;
     right: 0;
     min-width: 20px;
     height: 20px;
     text-align: center;
-    line-height: 24px;
+    line-height: 20px;
     font-weight: 700;
     font-size: 12px;
     background: red;
